# mlops

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  debug_model.py  docker-compose.yaml  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py
app/: __init__.py  api.py
app/artifacts/: inference.py  inference_class.pkl  sentiment_tokenizer.joblib
app/models/: iris.py  text.py
config/: .env.dev  .env.prod  .env.test
ml/: inference.py  model.joblib  sentiment_inference.py  training.py
tests/: test_app.py  test_sentiment.py  test_settings.py
