[project]
name = "mlops"
version = "0.1.0"
description = "Sentiment analysis & iris classifier API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "cloudpickle>=3.1.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "joblib>=1.4.2",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.9",
    "scikit-learn>=1.6.1",
    "transformers<4.35",
    "uvicorn>=0.34.0",
    "xenon>=0.9.3",
    "unidecode>=1.3.6",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9"
]
